# chat_api

./: README.md  pyproject.toml
src/api/: bot.py  client.html  connection_manager.py  main.py  storage.py
