[tool.poetry]
name = "chat-api"
version = "0.1.0"
description = "An API for webchat"
authors = ["Manel Villar <manelvf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
websocket = "^0.2.1"
httpx = "^0.27.2"
pydantic = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
